--- a/os-comp2023-record.html
+++ b/os-comp2023-record.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-05-19 五 09:49 -->
+<!-- 2023-05-19 五 21:42 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>OS 2023 学习记录</title>
@@ -27,15 +27,16 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org12bcd2e">1. day1 5.17</a></li>
-<li><a href="#org64b7ad4">2. day2 5.18</a></li>
+<li><a href="#orgdf20351">1. day1 5.17</a></li>
+<li><a href="#orga5e8cfc">2. day2 5.18</a></li>
+<li><a href="#org7004d63">3. day3 5.19</a></li>
 </ul>
 </div>
 </div>
 
 
-<div id="outline-container-org12bcd2e" class="outline-2">
-<h2 id="org12bcd2e"><span class="section-number-2">1.</span> day1 5.17</h2>
+<div id="outline-container-orgdf20351" class="outline-2">
+<h2 id="orgdf20351"><span class="section-number-2">1.</span> day1 5.17</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 完成了rustlings的50%.
@@ -55,8 +56,8 @@
 
 
 
-<div id="outline-container-org64b7ad4" class="outline-2">
-<h2 id="org64b7ad4"><span class="section-number-2">2.</span> day2 5.18</h2>
+<div id="outline-container-orga5e8cfc" class="outline-2">
+<h2 id="orga5e8cfc"><span class="section-number-2">2.</span> day2 5.18</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 继续完成rustlings剩下的50%.
@@ -275,6 +276,16 @@ eg3: Path实现了ToOwned,且type Owned = PathBuf. 因为PathBuf实现了Borrow,
 }
 </pre>
 </div>
+</div>
+</div>
+
+
+<div id="outline-container-org7004d63" class="outline-2">
+<h2 id="org7004d63"><span class="section-number-2">3.</span> day3 5.19</h2>
+<div class="outline-text-2" id="text-3">
+<p>
+学习 <code>RISC-V</code> 特权模式的基础内容, 看了对应的视频课, 做了笔记.
+</p>
 </div>
 </div>
 </div>
